blind commit, not sure what's here

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,10 +3,9 @@
 <head>
   <title>InitialFantasy</title>
   <%# stylesheet_link_tag "pages" %>
-  <%= javascript_include_tag "pages" %>
+  <%# javascript_include_tag "pages" %>
   <%= stylesheet_link_tag "application" %>
   <%= javascript_include_tag "application" %>
-
   <%= csrf_meta_tag %>
 </head>
 <body>
