--- a/app/views/pages/game.html.erb
+++ b/app/views/pages/game.html.erb
@@ -1,2 +1,16 @@
-<h1>Pages#game</h1>
-<p>Find me in app/views/pages/game.html.erb</p>
+<%= render "audio_elements" %>
+
+
+<div id="content">
+  <canvas id="title_screen" width="1000px" height="630px"></canvas>
+  <canvas id="battle_background" width="1000px" height="430px"></canvas>
+  <canvas id="battle_screen" width="1000px" height="430px"></canvas>
+  <canvas id="worldmap_screen" width="1000px" height="630px"></canvas>
+  
+  <%= render "battle_menu" %>
+  
+
+  <div id="character_menu">
+  </div>
+
+</div>
