--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -38,3 +38,7 @@
           %li Add a "You Win" screen to make the demo seem complete to prospective employers demo
 
 
+  .row
+    Click this 
+    =link_to "link", "/pages/game"
+    to watch the demo!
