it works again after updating webaudioapi

--- a/app/views/layouts/game_layout.html.erb
+++ b/app/views/layouts/game_layout.html.erb
@@ -10,11 +10,12 @@
 		<!-- 	Webfonts	 -->
 		<link rel="stylesheet" href="/fonts/ffvi/stylesheet.css" type="text/css" charset="utf-8" />
 		<link type="text/css" rel="stylesheet" href="/stylesheets/m.css">
+
+		<%= javascript_include_tag "howler" %>
 	
 		<!-- 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> -->
 		<script src="/javascripts/jquery-1.7.2.min.js"></script>
 		<script src="/javascripts/fabric.js/dist/all.js"></script>
-	  <script src="/javascripts/webAudioApiForDesigners/webAudioApiForDesigners.js"></script>
 	  
     <script src="/javascripts/globals.js"></script>
     <script src="/javascripts/ifClasses/screen.js"></script>
