--- a/app/views/layouts/game_layout.html.erb
+++ b/app/views/layouts/game_layout.html.erb
@@ -9,10 +9,10 @@
     
 		<!-- 	Webfonts	 -->
 		<link rel="stylesheet" href="/fonts/ffvi/stylesheet.css" type="text/css" charset="utf-8" />
-		<link type="text/css" rel="stylesheet" href="/stylesheets/m.css">
+		<%= stylesheet_link_tag "m" %>
+
 
 		<%= javascript_include_tag "howler" %>
-	
 		<!-- 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> -->
 		<script src="/javascripts/jquery-1.7.2.min.js"></script>
 		<script src="/javascripts/fabric.js/dist/all.js"></script>
@@ -27,7 +27,8 @@
     <script src="/javascripts/ifClasses/actionAnimation.js"></script>
     <script src="/javascripts/ifClasses/actionMenu.js"></script>
     <script src="/javascripts/titleScreen.js"></script>
-    <script src="/javascripts/m.js"></script>
+
+    <script src="/javascripts/initialize_game.js"></script>
 		
 		<script src="/javascripts/userInput.js"></script>
 		<script src="/javascripts/debugging.js"></script>
