--- a/public/fonts/ffvi/stylesheet.css
+++ b/public/fonts/ffvi/stylesheet.css
@@ -4,11 +4,9 @@
 
 @font-face {
     font-family: 'FinalFantasyVISNESaRegular';
-    src: url('final_fantasy_vi_snesa-webfont.eot');
-    src: url('final_fantasy_vi_snesa-webfont.eot?#iefix') format('embedded-opentype'),
-         url('final_fantasy_vi_snesa-webfont.woff') format('woff'),
-         url('final_fantasy_vi_snesa-webfont.ttf') format('truetype'),
-         url('final_fantasy_vi_snesa-webfont.svg#FinalFantasyVISNESaRegular') format('svg');
+
+    src: url('final_fantasy_vi_snesa-webfont.ttf') format('truetype');
+         
     font-weight: normal;
     font-style: normal;
 
