--- a/app/views/layouts/game_layout.html.erb
+++ b/app/views/layouts/game_layout.html.erb
@@ -7,13 +7,9 @@
 	  <title>Initial Fantasy</title>
     <link rel="shortcut icon" href="/favicon2.ico" type="image/x-icon" />
     
-		<!-- 	Webfonts	 -->
-		<!--
-		<link rel="stylesheet" href="/fonts/ffvi/stylesheet.css" type="text/css" charset="utf-8" />
-		-->
+		<!-- 	FFIV FONT	 -->
 		<style media="screen" type="text/css">/*<![CDATA[*/@import '/fonts/hacked_font/stylesheet.css';/*]]>*/</style>
 		<%= stylesheet_link_tag "m" %>
-
 
 		<%= javascript_include_tag "howler" %>
 		<!-- 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> -->
