restructured asset pipeline, and compiled for heroku deploy (and config for haml)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,7 @@
 <html>
 <head>
   <title>InitialFantasy</title>
-  <%= stylesheet_link_tag "application" %>
-  <%= javascript_include_tag "application" %>
+  <%= stylesheet_link_tag "bootstrap" %>
   <%= csrf_meta_tag %>
 </head>
 <body>
