--- a/app/views/layouts/game_layout.html.erb
+++ b/app/views/layouts/game_layout.html.erb
@@ -9,10 +9,9 @@
     
 		<!-- 	FFIV FONT	 -->
 		<style media="screen" type="text/css">/*<![CDATA[*/@import '/fonts/hacked_font/stylesheet.css';/*]]>*/</style>
-		<%= stylesheet_link_tag "m" %>
+		<%= stylesheet_link_tag "application" %>
 
-		<%= javascript_include_tag "howler" %>
-		<%= javascript_include_tag "jquery" %>
+		<%= javascript_include_tag "application" %>
 		<!-- 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> -->
 		<!-- 		<script src="/javascripts/jquery-1.7.2.min.js"></script> -->
 	  
