sprucing up content

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>InitialFantasy</title>
-  <%= stylesheet_link_tag "bootstrap" %>
+  <%= stylesheet_link_tag "bootstrap", "pages" %>
   <%= csrf_meta_tag %>
 </head>
 <body>
