--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -6,11 +6,11 @@
   .row
     .col-md-4
       %p
-        Hi, this was a project I started several years ago to brush up on my javascript programming styles 
-        (as is the case with many rails devs, 
-        my occational jQuery usage usually didn't span very many lines of code 
-        except in only a few cases where I got to do something special).  
-        That's not enough script to justify organizing in a maintanable form, 
+        Hi, this was a project I started several years ago to brush up on my javascript programming styles.
+        As is the case with many rails devs, 
+        my occational jQuery usage wasn't spanning very many lines of code 
+        except in only a few cases where I got to do something special.  
+        That's not enough script to justify organizing it in a maintanable form, 
         thus this side project was begun; a canvas based 2D remake of Final Fantasy II (SNES).  
 
     .col-md-4
