moved displayCommandList into ActionMenu

--- a/app/views/menus/_battle_menu.html.erb
+++ b/app/views/menus/_battle_menu.html.erb
@@ -1,7 +1,7 @@
 
 <div id="battle_menu">
   <div id="action_buttons">
-    <a class="fight_button" onmousedown="javascript:game.actionMenu.chooseAction('fight_button');"><div id="fight_button" class="action_buttons">Fight</div></a>
+    <a class="fight_button" onmousedown="javascript:game.battleScreen.actionMenu.chooseAction('fight_button');"><div id="fight_button" class="action_buttons">Fight</div></a>
   </div>
 
   <%= render "menus/mob_list" %>
