cleans up landing page

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,34 +1,17 @@
-
 .container
-
   %h1 Initial Fantasy
 
   .row
     .col-md-4
       %p
         Hi, this was a project I started several years ago to brush up on my javascript programming styles.
-        As is the case with many rails devs, 
-        my occational jQuery usage wasn't spanning very many lines of code 
-        except in only a few cases where I got to do something special.  
-        That's not enough script to justify organizing it in a maintanable form, 
-        thus this side project was begun; a canvas based 2D remake of Final Fantasy II (SNES).  
-
-    .col-md-4
-      %p
-        Due to how edge-railx0r I was when I started this project, 
-        I used brand spanking new features of the web browser and tested against only chrome and Firefox.
-        Years down the road, these features have been mutated or removed all together
-        and what we've learned is that when we make these kinds of 'low level' browser applications, 
-        we need to keep track of which versions of browsers we've tested successfully againts.  
+        At that point, I hadn't been using javascript based frameworks such as
+        BackBone or emberJS, therefore I felt I just wasn't getting enough javascript
+        in my life.... boy has that changed.
+        Anyway, from that lack of js, this side project was born; a canvas based
+        2D remake of Final Fantasy II (SNES).  
 
   .row
-    .col-md-4
-      %p
-        I don't maintain this project, though I would like to come back to it at some point, 
-        especially considering the fact that everything I did in js and the canvas seems to still work the way it did when I left off!
-        That's great news!
-        But at the moment, you won't be able to see thing correctly in FireFox, only chrome will work, and the 'fight' button 
-
     .col-md-4
       %div
         TODO:
@@ -37,8 +20,7 @@
           %li Add Phantom.JS unit tests so I can see where things are going wrong with mouse input... possibly fixed already
           %li Add a "You Win" screen to make the demo seem complete to prospective employers demo
 
-
   .row
-    Click this 
+    Click this
     =link_to "link", "/pages/game"
     to watch the demo!
