more content updating

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -7,9 +7,9 @@
         Hi, this was a project I started several years ago to brush up on my javascript programming styles.
         At that point, I hadn't been using javascript based frameworks such as
         BackBone or emberJS, therefore I felt I just wasn't getting enough javascript
-        in my life.... boy has that changed.
-        Anyway, from that lack of js, this side project was born; a canvas based
-        2D remake of Final Fantasy II (SNES).  
+        in my life... boy weren't those simpler times.
+        That being said, from that lack of js, this side project was born; a canvas based
+        2D remake of Final Fantasy II (SNES).
 
   .row
     .col-md-4
