--- a/public/styles.css
+++ b/public/styles.css
@@ -96,8 +96,7 @@ canvas#battle_screen {
     background:#0000ff;
   }
   
-  
-  @-webkit-keyframes fontbulger {
+  @keyframes fontbulger {
     0%, 100% {
       font-size: 1.2em;
       line-height: 1.6em;
@@ -108,22 +107,12 @@ canvas#battle_screen {
     }
   }
   
-  @-moz-keyframes fontbulger {
-    0%, 100% {
-      font-size: 1.2em;
-      line-height: 1.6em;
-    }
-    50% {
-      font-size: 1.4em;
-      line-height: 1.2em;
-    }
-  }
-  
-  .activated_picking{
+  .activated_picking {
     -webkit-animation: fontbulger 1s infinite;
     -moz-animation:    fontbulger 1s infinite;
     -ms-animation:     fontbulger 1s infinite;
     -o-animation:      fontbulger 1s infinite;
+    animation:      fontbulger 1s infinite;
   }
   
   .action_buttons{
@@ -141,10 +130,6 @@ canvas#battle_screen {
     font-size: 1.2em;;
   }
   
-  a.fight_button{
-    
-  }
-  
   a.fight_button:active{
     color:red;
   }
@@ -157,9 +142,6 @@ canvas#battle_screen {
     z-index:0;
   }
   
-  
-  
-  
   .menu_border{
     border-style:ridge;
     border-color:white;
@@ -170,7 +152,7 @@ canvas#battle_screen {
   div#battle_menu #enemies{
     position:relative;
     z-index:0;
-      height: 141px;
+    height: 141px;
     width: 240px;
     float:left;
     
@@ -190,125 +172,90 @@ canvas#battle_screen {
     font-size: 1em;
   }
   
-  
-  
   #mob_list li {
     cursor:default;
     height: 22px;
   }
   
-  
-  
   div#battle_menu #party{
     height: 181px;
     width: 682px;
     float:left;
-    
     margin-right:0px;
   }
   
-  
-  
-  
-  
-  
-  
   #character_list { 
     cursor:default;
-    
-    li div{
-      float:left;
-      padding: 10px 0;
-      height: 22px;
-    }
-  
-    .name{
-      margin-left:30px;
-      width: 160px;
-    }
-  
-    .current_hp{
-      margin-left:40px;
-      width:90px;
-      text-align:right;
-    }
-  
-    .max_hp{
-      margin-left:0px;
-      width:90px;
-      text-align:right;
-    }
-  
-    .current_mp{
-      width:70px;
-      margin-left:20px;
-      color:purple;
-    }
-  
-    .time{
-      position:relative;
-      overflow:hidden;
-      padding:0;
-      margin-top:11px;
-      margin-left:30px;
-      width:100px;
-      height:10px;
-        
-      border:solid;
-      border-radius:20px;
-      border-color:grey;
-    }
-  
-    .time {
-      .fill{
-        position:absolute;
-        width:20px;
-        background:white;
-        overflow:hidden;
-      }
-  
-      .wait_bar{
-        position:absolute;
-        top:0;
-        left:0;
-        width:100px;
-        height:10px;
-        padding:0;
-        margin:0;
-      }
-  
-    }
-  
   }
   
+  #character_list li div{
+    float:left;
+    padding: 10px 0;
+    height: 22px;
+  }
+
+  #character_list .name{
+    margin-left:30px;
+    width: 160px;
+  }
+
+  #character_list .current_hp{
+    margin-left:40px;
+    width:90px;
+    text-align:right;
+  }
+
+  #character_list .max_hp{
+    margin-left:0px;
+    width:90px;
+    text-align:right;
+  }
+
+  #character_list .current_mp{
+    width:70px;
+    margin-left:20px;
+    color:purple;
+  }
+
+  #character_list .time{
+    position:relative;
+    overflow:hidden;
+    padding:0;
+    margin-top:11px;
+    margin-left:30px;
+    width:100px;
+    height:10px;
+      
+    border:solid;
+    border-radius:20px;
+    border-color:grey;
+  }
+
+  #character_list .time {
+    .fill{
+      position:absolute;
+      width:20px;
+      background:white;
+      overflow:hidden;
+    }
+
+  }
   
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  #character_list .time .wait_bar{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100px;
+    height:10px;
+    padding:0;
+    margin:0;
+  }
   
   #worldmap_screen{
     display:none;
   }
   
-  
-  
   .clear{
       clear:both;
   }
-  
-  
-  
-  
-  
-  
-  
-  
   
